23-09-05 code refactoring (#59)
* feat: commit test

* feat: batch bug fix

* feat: rollback

* feat: code refactoring